<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="main_page_header">Mainpage header image</string>
    <string name="main_page_title">Пожалуй лучший фитнес трекер в ДВФУ</string>
    <string name="main_page_description">Созданный студентами <br>2-ого курса</br></string>
    <string name="main_page_registration_button">Зарегистрироваться</string>
    <string name="main_page_login_button">Уже есть аккаунт?</string>

    <string name="registration_page_title">Регистрация</string>
    <string name="registration_page_sex_placeholder">Пол</string>
    <string name="registration_page_footer">Нажимая на кнопку, вы соглашаетесь с <a href="https://www.google.com/">политикой конфиденциальности</a> и обработки персональных данных, а также принимаете <a href="https://www.google.com/">пользовательское соглашение</a></string>

    <string name="login_page_title">Вход</string>

    <string name="continue_hint">Продолжить</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="nickname_hint">Имя или никнейм</string>
    <string name="logo_app">Logo of app</string>
    <string name="title_app">Name of app</string>
    <string name="arrowback_description">Come Back</string>
    <string name="cyclists_description">Image of cyclists</string>
    <string name="sex_man">Мужской</string>
    <string name="sex_woman">Женский</string>
    <string name="sex_other">Не указывать</string>

    <string name="activity_page_my">Мои</string>
    <string name="activity_page_users">Пользователей</string>
    <string name="action_activity">Активность</string>
    <string name="action_profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="comment_hint">Комментарий</string>
    <string name="action_card_start_text">Старт</string>
    <string name="action_card_finish_text">Финиш</string>
    <string name="comment_user">Я бежал очень сильно, ты так не сможешь</string>
    <string name="user_distance">14.32 км</string>
    <string name="user_time_ago">14 часов назад</string>
    <string name="user_time">1 ч 42 мин</string>
    <string name="separator_stick">|</string>
    <string name="action_card_start_time">14:49</string>
    <string name="action_card_finish_time">16:31</string>
    <string name="bicycle_title">Велосипед 🚲</string>

    <string name="change_password_text">Изменить пароль</string>
    <string name="old_password_hint">Старый пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="accept_text">Принять</string>
    <string name="title_profile">Профиль</string>
    <string name="save_text">Сохранить</string>
    <string name="login_template_text">Supertox</string>
    <string name="nickname_template_text">geraltizreevii</string>
    <string name="password_change_btn">Изменить пароль</string>
    <string name="exit_text">Выйти</string>

    <string name="start_title">Погнали? :)</string>
    <string name="start_button">Начать</string>


</resources>